crates/zendriver-mcp/tests/snapshots/schema_snapshots__cloudflare_snaps__cloudflare_solve_out.snap
---
source: crates/zendriver-mcp/tests/schema_snapshots.rs
expression: "schema_for! (tools::cloudflare::SolveOutput)"
---
$schema: "https://json-schema.org/draft/2020-12/schema"
title: SolveOutput
description: "Output of `browser_solve_turnstile`."
type: object
properties:
  outcome:
    description: Which terminal state the bypass reached.
    $ref: "#/$defs/Outcome"
  token:
    description: "Turnstile response token. Populated only when `outcome == Solved`;\n`None` for `ChallengeGone` and `Timeout`."
    type:
      - string
      - "null"
required:
  - outcome
$defs:
  Outcome:
    description: "Terminal outcome of a turnstile bypass attempt.\n\n`Solved` and `ChallengeGone` mirror the lib's `ClearanceOutcome`\nvariants. `Timeout` mirrors the lib's `ClearanceOutcome::TimedOut` — a\ndeadline in a turnstile flow is a normal outcome, not an error —\nsurfacing it on the success channel so agents can branch on `outcome`\nwithout try/catch around a timeout."
    oneOf:
      - description: "Turnstile produced a token — the value held by the first matching\n`selectors.token_inputs` entry, `cf-turnstile-response` by default.\nThe token is available in [`SolveOutput::token`]."
        type: string
        const: solved
      - description: "The challenge stopped being actionable without yielding a token\n(e.g. a clearance cookie shortcut). `token` will be `None`.\n\nNot proof the gate was passed: this also fires when the widget is\nstill mounted but hidden or zero-size, so verify the page before\ntreating what you read next as post-challenge content."
        type: string
        const: challenge_gone
      - description: "`timeout_ms` elapsed without reaching either success state. `token`\nwill be `None`. Not a hard error — agents can retry or give up."
        type: string
        const: timeout
